<resources>
    <string name="app_name">LoginAndRegistration</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registration_register">Register</string>
    <string name="registration_name">Name</string>
    <string name="registration_email_address">Email Address</string>
    <string name="registration_username">Username</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm Password</string>
</resources>